brat/test/golden/error/kbadvec3.brat.golden
Error in test/golden/error/kbadvec3.brat@2:19
constNil = { b => cons(1, nil) }
                  ^^^^^^^^^^^^

  Expected vector of length 0
from the type:  Vec(Bit, 0)
but got vector: [1]
of length (> 0)


